--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   "dependencies": {
     "@expo-google-fonts/space-grotesk": "^0.2.2",
     "@expo/metro-runtime": "~4.0.0",
+    "@react-native-firebase/app": "^21.12.3",
+    "@react-native-firebase/auth": "^21.12.3",
+    "@react-native-firebase/firestore": "^21.12.3",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
