--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "@react-navigation/native-stack": "^7.2.0",
         "@shopify/flash-list": "1.7.3",
         "@tanstack/react-query": "^5.71.0",
-        "apisauce": "3.0.1",
+        "apisauce": "^3.1.1",
         "date-fns": "^4.1.0",
         "expo": "~52.0.7",
         "expo-application": "~6.0.1",
