--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dependencies": {
         "@expo-google-fonts/space-grotesk": "^0.2.2",
         "@expo/metro-runtime": "~4.0.0",
+        "@react-native-community/datetimepicker": "react-native-community/datetimepicker",
         "@react-native-firebase/app": "^21.12.3",
         "@react-native-firebase/auth": "^21.12.3",
         "@react-native-firebase/firestore": "^21.12.3",
