--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@react-native-firebase/app": "^21.12.3",
         "@react-native-firebase/auth": "^21.12.3",
         "@react-native-firebase/firestore": "^21.12.3",
+        "@react-native-picker/picker": "^2.11.0",
         "@react-navigation/bottom-tabs": "^7.2.0",
         "@react-navigation/native": "^7.0.14",
         "@react-navigation/native-stack": "^7.2.0",
